# MATH4650_SP_2026_P01_G03_Muraishi

./: Makefile  README.md  pyproject.toml
docs/: README.md  mkdocs.yml
docs/docs/: index.md
notebooks/: temp.ipynb
