[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "module"
version = "0.0.1"
description = "Mini project in MATH4650"
authors = [
  { name = "Shota Muraishi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.0"


[tool.ruff]
line-length = 99
src = ["module"]
include = ["pyproject.toml", "module/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["module"]
force-sort-within-sections = true

